--- a/src/styles/components/_switch.scss
+++ b/src/styles/components/_switch.scss
@@ -1,45 +1,44 @@
-.toggle-container {
-  position: relative;
-  svg {
-    position: absolute;
-    transform: translate(65%, 85%);
-  }
-}
 input[type='checkbox'] {
-  height: 0;
-  width: 0;
-  visibility: hidden;
-}
-
-label {
+  all: unset;
+  appearance: none;
   cursor: pointer;
   width: 24px;
   height: 24px;
+  border-radius: 50%;
   background: $veryDarkGrayishBlue;
-  float: right;
-  border-radius: 100px;
-  transition: all 0.4s ease-in;
-  position: relative;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 
-  &:after {
+  &::after {
+    content: '\f00c';
+    font-family: 'Font Awesome 5 Free';
+    font-weight: 900;
+    font-size: 0.7rem;
+    color: $VeryLightGray;
+    display: none;
+  }
+
+  &::before {
     content: '';
-    position: absolute;
     width: 20px;
     height: 20px;
+    border-radius: 50%;
     background: $veryDarkDesaturatedBlue;
-    border-radius: 90px;
-    transition: all 0.4s ease-out;
-    transform: translate(10%, 10%);
   }
+
   &:hover {
     background: linear-gradient(to left, #57ddff, #c058f3);
   }
-}
 
-input:checked + label {
-  background: linear-gradient(to left, #57ddff, #c058f3);
-
-  &:after {
+  &:checked {
     background: linear-gradient(to left, #57ddff, #c058f3);
+  }
+
+  &:checked:after {
+    display: block;
+  }
+  &:checked:before {
+    display: none;
   }
 }
