--- a/src/styles/layout/_layout.scss
+++ b/src/styles/layout/_layout.scss
@@ -1,5 +1,6 @@
 body {
   height: 300px;
+  background: $veryDarkBlue;
   background-image: url('../../images/bg-desktop-dark.jpg');
   background-repeat: no-repeat;
   background-size: cover;
@@ -8,4 +9,5 @@ body {
 .container {
   margin: 0 auto;
   max-width: 540px;
+  position: relative;
 }
