--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -7,5 +7,6 @@
 @import 'components/header';
 @import 'components/box';
 @import 'components/switch';
+@import 'components/list-item';
 
 @import 'layout/layout';
