--- a/src/styles/abstracts/_variables.scss
+++ b/src/styles/abstracts/_variables.scss
@@ -6,7 +6,7 @@ $brightBlue: hsl(220, 98%, 61%);
 
 //Light Theme
 
-$VeryLightGray: hsl(0, 0%, 98%);
+$VeryLightGray: #fafafa;
 $VeryLightGrayishBlue: hsl(236, 33%, 92%);
 $LightGrayishBlue: hsl(233, 11%, 84%);
 $DarkGrayishBlue: hsl(236, 9%, 61%);
@@ -14,7 +14,7 @@ $VeryDarkGrayishBlue: hsl(235, 19%, 35%);
 
 //Dark Theme
 
-$veryDarkBlue: hsl(235, 21%, 11%);
+$veryDarkBlue: #161722;
 $veryDarkDesaturatedBlue: hsl(235, 24%, 19%);
 $lightGrayishBlue: hsl(234, 39%, 85%);
 
