--- a/src/styles/layout/_layout.scss
+++ b/src/styles/layout/_layout.scss
@@ -1,9 +1,19 @@
-body {
+.container-back {
   height: 300px;
-  background: $veryDarkBlue;
-  background-image: url('../../images/bg-desktop-dark.jpg');
+  background: $VeryLightGray;
+  background-image: url('../../images/bg-desktop-light.jpg');
   background-repeat: no-repeat;
   background-size: cover;
+  position: absolute;
+  width: 100%;
+  top: 0;
+
+  &.dark {
+    background: $veryDarkBlue;
+    background-image: url('../../images/bg-desktop-dark.jpg');
+    background-repeat: no-repeat;
+    background-size: cover;
+  }
 }
 
 .container {
