--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -8,5 +8,6 @@
 @import 'components/box';
 @import 'components/switch';
 @import 'components/list-item';
+@import 'components/tooltip';
 
 @import 'layout/layout';
